src/test/resources/compilation_error/prefix_already_bound_error_1.funcky
foo: "funcky:foo"
foo: "funcky:foo"
